--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server.port: 8081
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/academia?useTimezone=true&serverTimezone=UTC&useLegacyDate
-    username: cami
-    password: root
+    url: jdbc:postgresql://localhost:5433/pdhouse?useTimezone=true&serverTimezone=UTC&useLegacyDate
+    username: postgres
+    password: postgres
   jpa:
     show-sql: true
     hibernate:
