Testando Sonar Qube

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ version: 2.1
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
+orbs:
+  sonarqube: ft-circleci-orbs/sonarqube-orb@1.0.0
 jobs:
   build:
     docker:
@@ -56,4 +58,5 @@ workflows:
       - RegressionTest:
           requires:
             - SanityTest
+      - sonarqube/scan
 
