--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,5 +58,7 @@ workflows:
       - RegressionTest:
           requires:
             - SanityTest
-      - sonarqube/scan
+      - sonarqube/scan:
+            server-url: localhost:9000
+
 
