--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,8 @@ workflows:
       - RegressionTest:
           requires:
             - SanityTest
-      - sonarqube/analyze
+      - sonarqube/analyze:
+          host_url: https://sonarcloud.io/
 
 
 
