--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 # See: https://circleci.com/docs/configuration-reference/#jobs
 orbs:
 #  sonarqube: ft-circleci-orbs/sonarqube-orb@1.0.0
-  sonarqube: clicklogiq/sonarqube@1.0.1
+  sonarqube: ft-circleci-orbs/sonarqube-orb@1.0.0
 jobs:
   build:
     docker:
@@ -59,7 +59,7 @@ workflows:
       - RegressionTest:
           requires:
             - SanityTest
-      - sonarqube/analyze
+      - sonarqube/scan
 
 
 
