teste com sonar cloud

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,8 @@ workflows:
       - RegressionTest:
           requires:
             - SanityTest
-      - sonarqube/scan
+      - sonarqube/scan:
+          server-url: https://sonarcloud.io/
 
 
 
