--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,7 +162,8 @@ jobs:
   scan-mvn:
     docker:
       - image: cimg/openjdk:20.0.1
-
+        environment:
+            PGHOST: 127.0.0.1
       - image: cimg/postgres:14.0
         environment:
             POSTGRES_USER: imario
