--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,9 @@ commands:
   maven-send-to-sonar:
     description: "Maven send to SonarCloud"
     parameters:
+      reṕort-path:
+        default: /home/circleci/project/target/sonar/report-task.txt
+        type: string
       project-key:
         description: Sonar project key
         default: $SONAR_PK
@@ -80,6 +83,10 @@ commands:
         type: string
     steps:
       - run:
+          command: |
+            apt get install -y jq
+            echo $(pwd)
+      - run:
           name: "Maven send to Sonar"
           command: |
             if ["${CIRCLE_PULL_REQUEST##*/}" == ""];
@@ -90,7 +97,8 @@ commands:
                 -Dsonar.organization=<<parameters.organization>> \
                 -Dsonar.login=<<parameters.token>> \
                 -Dsonar.projectKey=<<parameters.project-key>>
-              cat /home/circleci/project/target/sonar/report-task.txt
+              ce_status=$(curl -s -u "<<parameters.project-key>>": "https://sonarcloud.io"/api/ce/task?id=$(cat <<parameters.reṕort-path>> | grep $CE_TASK_ID_KEY | cut -d'=' -f2) | jq -r .task.status)
+              cat $ce_status
             else
               echo "PR analysis..."
               mvn verify sonar:sonar \
