--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,7 @@ commands:
                 -Dsonar.organization=<<parameters.organization>> \
                 -Dsonar.login=<<parameters.token>> \
                 -Dsonar.projectKey=<<parameters.project-key>>
-              ce_status=$(curl -s -u "<<parameters.project-key>>": "https://sonarcloud.io"/api/ce/task?id=$(cat <<parameters.reṕort-path>> | grep $CE_TASK_ID_KEY | cut -d'=' -f2) | jq -r .task.status)
+              ce_status=$(curl -s -u "<<parameters.project-key>>": https://sonarcloud.io/api/ce/task?id=$(cat <<parameters.reṕort-path>> | grep $CE_TASK_ID_KEY | cut -d'=' -f2) | jq -r .task.status)
               cat $ce_status
             else
               echo "PR analysis..."
