--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,6 @@ commands:
       - run:
           command: |
             apt get install -y jq
-            echo $(pwd)
       - run:
           name: "Maven send to Sonar"
           command: |
@@ -97,7 +96,8 @@ commands:
                 -Dsonar.organization=<<parameters.organization>> \
                 -Dsonar.login=<<parameters.token>> \
                 -Dsonar.projectKey=<<parameters.project-key>>
-            
+              ce_status=$(curl -s -u <<parameters.project-key>>: https://sonarcloud.io/api/ce/task?id=$(cat /home/circleci/project/target/sonar/report-task.txt | grep "ceTaskId=" | cut -d'=' -f2) | jq -r .task.status)
+              cat $ce_status
             else
               echo "PR analysis..."
               mvn verify sonar:sonar \
