--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,8 @@ commands:
                 -Dsonar.login=<<parameters.token>> \
                 -Dsonar.projectKey=<<parameters.project-key>>
               ce_status=$(curl -s -u <<parameters.project-key>>: https://sonarcloud.io/api/ce/task?id=$(cat /home/circleci/project/target/sonar/report-task.txt | grep "ceTaskId=" | cut -d'=' -f2) | jq -r .task.status)
-              cat $ce_status
+              echo $ce_status
+              
             else
               echo "PR analysis..."
               mvn verify sonar:sonar \
