--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,8 +96,7 @@ commands:
                 -Dsonar.organization=<<parameters.organization>> \
                 -Dsonar.login=<<parameters.token>> \
                 -Dsonar.projectKey=<<parameters.project-key>>
-              ce_status=$(curl -s -u <<parameters.project-key>>: https://sonarcloud.io/api/ce/task?id=$(cat /home/circleci/project/target/sonar/report-task.txt | grep "ceTaskId=" | cut -d'=' -f2) | jq -r .task.status)
-              echo $ce_status
+              echo $(curl -s -u <<parameters.project-key>>: https://sonarcloud.io/api/ce/task?id=$(cat /home/circleci/project/target/sonar/report-task.txt | grep "ceTaskId=" | cut -d'=' -f2) | jq -r .task.status)
               
             else
               echo "PR analysis..."
