--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,8 +116,13 @@ commands:
             qg_status=$(curl -s -u <<parameters.token>>: https://sonarcloud.io/api/qualitygates/project_status?analysisId="${ce_analysis_id}" | jq -r .projectStatus.status)
             echo "Task Id"
             echo ${task_id}
+            sleep 0.5
             ce_status=$(curl -s -u <<parameters.token>>: https://sonarcloud.io/api/ce/task?id=${task_id} | jq -r .task.status)
             echo "Status"
+            if [ "${qg_status}" != "OK" ]; then
+                echo "QG Script --> Quality gate is not OK - exiting with error 1"
+                circleci-agent step halt
+            fi
             echo ${qg_status}
 executors:
   node:
