--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,7 +119,7 @@ commands:
             echo "Workflow ${CIRCLE_WORKFLOW_ID}"
                 if [ "${qg_status}" != "OK" ]; then
                     echo "QG Script --> Quality gate is not OK - exiting with error 1"
-                    curl -X POST "https://circleci.com/api/v2/workflow/$CIRCLE_WORKFLOW_ID/cancel?circle-token=$CIRCLE_API_TOKEN"
+                    curl -X POST "https://circleci.com/api/v2/workflow/$CIRCLE_WORKFLOW_ID/cancel?circle-token=${CIRCLE_API_TOKEN}"
                 fi
             echo "Status"
             echo ${qg_status}
