--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,7 +124,7 @@ commands:
                 echo "QG Script --> Quality gate is not OK - exiting with error 1"
                 curl --request POST \
                 --url https://circleci.com/api/v2/workflow/${CIRCLE_WORKFLOW_ID}/cancel \
-                --header 'authorization: Basic ${CIRCLE_API_TOKEN}'
+                --header 'Circle-Token: ${CIRCLE_API_TOKEN}'
             fi
             echo "Status"
             echo ${qg_status}
