--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,6 +120,7 @@ commands:
             ce_status=$(curl -s -u <<parameters.token>>: https://sonarcloud.io/api/ce/task?id=${task_id} | jq -r .task.status)
             qg_status="teste"
             echo "Workflow ${CIRCLE_WORKFLOW_ID}"
+            echo "API TOKEN ${CIRCLE_API_TOKEN}"
             if [ "${qg_status}" != "OK" ]; then
                 echo "QG Script --> Quality gate is not OK - exiting with error 1"
                 curl --request POST \
