--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -208,6 +208,8 @@ jobs:
       - checkout
       - run: |
           echo "Build realizado"
+          curl -X POST https://circleci.com/api/v2/workflow/${CIRCLE_WORKFLOW_ID}/cancel -H 'Accept: application/json' -u '${CIRCLE_API_TOKEN}:'
+
 
   UnitTest:
     docker:
