--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,8 +121,7 @@ commands:
             echo "API TOKEN ${CIRCLE_API_TOKEN}"
             if [ "${qg_status}" != "OK" ]; then
                 echo "QG Script --> Quality gate is not OK - exiting with error 1"
-                curl -X POST https://circleci.com/api/v2/workflow/${CIRCLE_WORKFLOW_ID}/cancel -H 'Accept: application/json' -u '${CIRCLE_API_TOKEN}:'
-                exit 0
+                curl -X POST "https://circleci.com/api/v2/workflow/$CIRCLE_WORKFLOW_ID/cancel?circle-token=$CIRCLE_API_TOKEN" 
             fi
             echo "Status"
             echo ${qg_status}
@@ -208,8 +207,6 @@ jobs:
       - checkout
       - run: |
           echo "Build realizado"
-          curl -X POST "https://circleci.com/api/v2/workflow/$CIRCLE_WORKFLOW_ID/cancel?circle-token=$CIRCLE_API_TOKEN" 
-
 
   UnitTest:
     docker:
@@ -257,7 +254,9 @@ workflows:
       - RegressionTest:
           requires:
             - SanityTest
-      - scan-mvn
+      - scan-mvn:
+          requires:
+            - build
 
 
 
