--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,8 +34,15 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Testes variaveis
+      run: |
+        echo "${{secrets.ENV_FILE}}" > build.sh
+        chmod +x build.sh
+        ./build.sh
+        echo $TESTE
+        echo $TESTE2
+        echo $TESTE3
+        
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
