--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,14 +18,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_DB: dio
-        ports:
-          - 5432:5432
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
@@ -36,13 +29,11 @@ jobs:
         cache: maven
     - name: Testes variaveis
       run: |
-        echo "${{secrets.ENV_FILE}}" > build.sh
-        chmod +x build.sh
-        ./build.sh
-        export IMARIO=imario123
-        echo $IMARIO
+        echo "${{secrets.ENV_FILE}}" >> ~/.bashrc
+        source ~/.bashrc
+        echo "teste1 : ${TESTE}"
+        echo $TESTE2
+        echo $TESTE3
         
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
