--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         echo $V_TESTE >> ~/.bashrc
         source ~/.bashrc
+        echo $V_TESTE
         echo "teste1 : ${TESTE}"
         echo $TESTE2
         echo $TESTE3
