Testando no variavel 3

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         echo $V_TESTE >> ~/.bashrc
         source ~/.bashrc
-        echo $V_TESTE
+        echo ${{vars.V_TESTE}}
         echo "teste1 : ${TESTE}"
         echo $TESTE2
         echo $TESTE3
