--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,6 +35,6 @@ jobs:
 
       #echo "${{secrets.ENV_FILE}}" >> ~/.bashrc
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    #  echo $TESTE
+    #  echo $TESTE1
     #  echo $TESTE2
     #  echo $TESTE3
